--- a/css/login.css
+++ b/css/login.css
@@ -2,15 +2,15 @@ body {
   padding-top: 50px;
 }
 
-.row {
+.container > .row {
 	padding: 100px 0 0 0;
 }
 
-.col-lg-4 {
+.form-box {
   background-color: #eee;
-  padding-bottom: 20px;
+  padding: 20px 40px 40px 40px;
 }
 
-.col-lg-4 h3 {
+.form-box h3 {
 	padding-bottom: 20px;
 }
