--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
@@ -3,32 +3,14 @@
   <head>
     <title>coach.me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="../css/bootstrap-glyphicons.css" rel="stylesheet" media="screen">
-    <link href="../css/main.css" rel="stylesheet" media="screen">
-    <link href="../css/join.css" rel="stylesheet" media="screen">
+    {% stylesheets '%kernel.root_dir%/Resources/public/css/*'
+    							 '@gipsydangerpeopleBundle/Resources/public/css/join.css' %}
+      <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
+    
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">coach.me</a>
-        <div class="nav-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#about">Find a Coach</a></li>
-          </ul>
-          <ul class="nav navbar-nav pull-right">
-	          <li class="active"><a href="#join">Join</a></li>
-            <li><a href="#login">Login</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+    
 
     <div class="container">
     	<div class="row">
@@ -50,12 +32,9 @@
     </div><!-- /.container -->
 
     <!-- JavaScript plugins (requires jQuery) -->
-    <script src="../js/jquery-1.10.2.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../js/bootstrap.min.js"></script>
-
-    <!-- Optionally enable responsive features in IE8 -->
-    <script src="../js/respond.js"></script>
+    {% javascripts '%kernel.root_dir%/Resources/public/js/*' %}
+       <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
   </body>
 </html>
 
