--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
@@ -10,8 +10,7 @@
     
   </head>
   <body>
-    
-
+    {% include '%kernel.root_dir%/Resources/views/header.html.twig' %}
     <div class="container">
     	<div class="row">
     		<div class="col-lg-4 col-offset-1 text-center form-box">
