[Master] Fix inclusion bug

--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/login/login.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/login/login.html.twig
@@ -9,7 +9,7 @@
     {% endstylesheets %}
   </head>
   <body>
-    {% include '%kernel.root_dir%/Resources/views/header.html.twig' %}
+    {% include '::header.html.twig' %}
     <div class="container">
     	<div class="row">
     		<div class="col-lg-4 col-offset-4 form-box">
