--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
@@ -3,15 +3,12 @@
   <head>
     <title>coach.me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% stylesheets '%kernel.root_dir%/Resources/public/css/*'
+    {% stylesheets '%kernel.root_dir%/Resources/public/css/*',
     							 '@gipsydangerpeopleBundle/Resources/public/css/join.css' %}
       <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
-    
   </head>
   <body>
-    
-
     <div class="container">
     	<div class="row">
     		<div class="col-lg-4 col-offset-1 text-center form-box">
