--- a/Symfony/src/gipsydanger/searchBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/gipsydanger/searchBundle/Resources/views/Default/index.html.twig
@@ -1,47 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>coach.me</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    {% stylesheets '%kernel.root_dir%/Resources/public/css/*' %}
-      <link rel="stylesheet" href="{{ asset_url }}" />
-    {% endstylesheets %}
+{% extends '::framework.html.twig' %}
 
-  </head>
-  <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">coach.me</a>
-        <div class="nav-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#about">Find a Coach</a></li>
-          </ul>
-          <ul class="nav navbar-nav pull-right">
-	          <li><a href="#join">Join</a></li>
-            <li><a href="#login">Login</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+{% block title %}
+<title>welcome to coach.me</title>
+{% endblock %}
 
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
-    </div><!-- /.container -->
-
-    <!-- JavaScript plugins (requires jQuery) -->
-    {% javascripts '%kernel.root_dir%/Resources/public/js/*' %}
-       <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
-  </body>
-</html>
+{% block maincontent %}
+<div class="starter-template">
+  <h1>Bootstrap starter template</h1>
+  <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+</div>
+{% endblock %}
