--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/coach.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/coach.html.twig
@@ -10,7 +10,7 @@
 
 {% block maincontent %}
 <div class="row">
-	<div class="col-lg-8 col-offset-1 form-box">
+	<div class="col-lg-8 col-offset-1 form-content-box">
 		<h3 class="text-primary">Join as a coach</h3>
 		<form class="form-horizontal">
 		  <fieldset>
