--- a/Symfony/app/Resources/views/framework.html.twig
+++ b/Symfony/app/Resources/views/framework.html.twig
@@ -4,20 +4,13 @@
   	{% block title %}{% endblock %}
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% stylesheets '%kernel.root_dir%/Resources/public/css/*'
-    							 '@gipsydangerpeopleBundle/Resources/public/css/login.css'
-    							 '@gipsydangerpeopleBundle/Resources/public/css/join.css' %}
+    {% stylesheets '%kernel.root_dir%/Resources/public/css/*' %}
       <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
 		  <div class="container">
-		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-		      <span class="icon-bar"></span>
-		      <span class="icon-bar"></span>
-		      <span class="icon-bar"></span>
-		    </button>
 		    <a class="navbar-brand" href="#">coach.me</a>
 		    <div class="nav-collapse collapse">
 		      <ul class="nav navbar-nav">
