--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
@@ -10,14 +10,14 @@
 
 {% block maincontent %}
 <div class="row">
-	<div class="col-lg-4 col-offset-1 text-center form-box">
+	<div class="col-lg-4 col-offset-1 text-center form-content-box">
 		<h3 class="text-primary">Create a coaching account</h3>
 		<p>
 			Easy to understand description about what a coaching account is.
 		</p>
 		<button type="button" class="btn btn-primary btn-large btn-block">Block level button</button>
 	</div>
-	<div class="col-lg-4 col-offset-2 text-center form-box">
+	<div class="col-lg-4 col-offset-2 text-center form-content-box">
 		<h3 class="text-success">Create a normal account</h3>
 		<p>
 			Easy to understand description about what a normal account is.
