--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/login/login.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/login/login.html.twig
@@ -10,7 +10,7 @@
 
 {% block maincontent %}
 <div class="row">
-	<div class="col-lg-4 col-offset-4 form-box">
+	<div class="col-lg-4 col-offset-4 form-content-box">
 		<h3 class="text-primary text-center">Login</h3>
 		<form>
 		  <fieldset>
