--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/coach.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/coach.html.twig
@@ -11,8 +11,8 @@
 <div class="widget">
 	<div class="col-lg-8 col-offset-1 form-content-box">
 		<h3 class="text-primary">Join as a coach</h3>
-		<form class="form-horizontal">
 		  <fieldset>
+		  	<form action="{{ path('gipsydangerpeople_signup') }}" method="post" class="form-horizontal">
 			  	<div class="form-group">
 			  		<div class="col-lg-8">
 				      <!-- <input type="text" class="form-control half-control" id="exampleInputFname" placeholder="First Name"> -->
@@ -31,7 +31,7 @@
 			    </div>
 			    <div class="form-group">
 			    	<div class="col-lg-8">
-			      	<!-- <input type="text" class="form-control" id="exampleInputPassword" placeholder="Password"> -->	
+			      	<!-- <input type="text" class="form-control" id="exampleInputPassword" placeholder="Password"> -->
 			      	{{ form_widget(loginForm.password.first) }}
 			    	</div>
 			    </div>
@@ -43,6 +43,7 @@
 			    </div>
 			    <!-- <button type="submit" class="btn btn-primary">Join and continue to profile creation &rarr;</button> -->
 			    {{ form_widget(loginForm.register) }}
+			  {{ form_end	(loginForm) }}
 		  </fieldset>
 		</form>
 	</div>
