--- a/Symfony/app/Resources/views/framework.html.twig
+++ b/Symfony/app/Resources/views/framework.html.twig
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% stylesheets '%kernel.root_dir%/Resources/public/css/*' %}
       <link rel="stylesheet" href="{{ asset_url }}" />
+      <!-- Icon fonts -->
+      
+      <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     {% endstylesheets %}
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
 		  <div class="container">
-		    <a class="navbar-brand" href="#">coach.me</a>
+		    <a class="navbar-brand" href="#">coachli.st</a>
 		    <div class="nav-collapse collapse">
 		      <ul class="nav navbar-nav">
 		      	{% block browsemenu %}
