--- a/Symfony/src/gipsydanger/indexBundle/Resources/views/index/index.html.twig
+++ b/Symfony/src/gipsydanger/indexBundle/Resources/views/index/index.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>coach.me</title>
+    <title>coachli.st</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     {% stylesheets '%kernel.root_dir%/Resources/public/css/*' %}
@@ -17,7 +17,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">coach.me</a>
+        <a class="navbar-brand" href="#">coachli.st</a>
         <div class="nav-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#about">Find a Coach</a></li>
