--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/coach.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/coach.html.twig
@@ -1,6 +1,6 @@
 {% extends '::framework.html.twig' %}
 {% block title %}
-<title>join as coach | coach.me</title>
+<title>join as coach | coachli.st</title>
 {% endblock %}
 
 {% block joinmenu %}
@@ -9,7 +9,7 @@
 
 {% block maincontent %}
 <div class="widget">
-	<div class="col-lg-8 col-offset-1 form-content-box">
+	<div class="col-lg-8 col-lg-offset-1 form-content-box">
 		<h3 class="text-primary">Join as a coach</h3>
 		  <fieldset>
 		  	<form action="{{ path('gipsydangerpeople_signup') }}" method="post" class="form-horizontal">
