--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/login/login.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/login/login.html.twig
@@ -1,7 +1,7 @@
 {% extends '::framework.html.twig' %}
 
 {% block title %}
-<title>login | coach.me</title>
+<title>login | coachli.st</title>
 {% endblock %}
 
 {% block loginmenu %}
@@ -10,7 +10,7 @@
 
 {% block maincontent %}
 <div class="row">
-	<div class="col-lg-4 col-offset-4 form-content-box">
+	<div class="col-lg-4 col-lg-offset-4 form-content-box">
 		<h3 class="text-primary text-center">Login</h3>
 		<form>
 		  <fieldset>
@@ -25,7 +25,7 @@
 		        <input type="checkbox"> <p class="text-muted">Remember me</p>
 		      </label>
 		    </div>
-		    <button type="submit" class="btn btn-primary btn-large btn-block">Login</button>
+		    <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
 		  </fieldset>
 		</form>
 	</div>
