--- a/Symfony/src/gipsydanger/searchBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/gipsydanger/searchBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends '::framework.html.twig' %}
 
 {% block title %}
-<title>welcome to coach.me</title>
+<title>welcome to coachli.st</title>
 {% endblock %}
 
 {% block maincontent %}
