--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/join.html.twig
@@ -1,6 +1,6 @@
 {% extends '::framework.html.twig' %}
 {% block title %}
-<title>join | coach.me</title>
+<title>join | coachli.st</title>
 {% endblock %}
 
 {% block joinmenu %}
@@ -9,19 +9,19 @@
 
 {% block maincontent %}
 <div class="row">
-	<div class="col-lg-4 col-offset-1 text-center form-content-box">
+	<div class="col-lg-4 col-lg-offset-1 text-center form-content-box">
 		<h3 class="text-primary">Create a coaching account</h3>
 		<p>
 			Easy to understand description about what a coaching account is.
 		</p>
-		<button type="button" class="btn btn-primary btn-large btn-block">Block level button</button>
+		<button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
 	</div>
-	<div class="col-lg-4 col-offset-2 text-center form-content-box">
+	<div class="col-lg-4 col-lg-offset-2 text-center form-content-box">
 		<h3 class="text-success">Create a normal account</h3>
 		<p>
 			Easy to understand description about what a normal account is.
 		</p>
-		<button type="button" class="btn btn-success btn-large btn-block">Block level button</button>
+		<button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
 	</div>
 </div>
 {% endblock %}
