--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/normal.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/join/normal.html.twig
@@ -1,7 +1,7 @@
 {% extends '::framework.html.twig' %}
 
 {% block title %}
-<title>join as normal user | coach.me</title>
+<title>join as normal user | coachli.st</title>
 {% endblock %}
 
 {% block joinmenu %}
@@ -10,7 +10,7 @@
 
 {% block maincontent %}
 <div class="row">
-	<div class="col-lg-8 col-offset-1 form-content-box">
+	<div class="col-lg-8 col-lg-offset-1 form-content-box">
 		<h3 class="text-primary">Join as a prospective student</h3>
 		<form class="form-horizontal">
 		  <fieldset>
