--- a/Symfony/src/gipsydanger/peopleBundle/Resources/views/profile/profile.html.twig
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/views/profile/profile.html.twig
@@ -1,15 +1,61 @@
 {% extends '::framework.html.twig' %}
 
 {% block title %}
-<title>profile | coach.me</title>
+<title>profile | coachli.st</title>
 {% endblock %}
 
 {% block maincontent %}
-<div class="row">
-	<div class="col-lg-8 content-box">
-		
+<div class="row profile-box">
+	<div class="col-lg-8">
+		<div class="row">
+      <div class="col-lg-12 background-content padded-box">
+      	<div class="col-lg-2">
+        	<img src="#avatar"/>
+      	</div>
+      	<div class="col-lg-10">
+        	<h2 class="no-margin">Zack Elliott <p class="text-muted username">hubrid.883</p></h2>
+        		<p>
+        			<strong><i class="icon-location-arrow"></i> Seattle</strong>&nbsp;&nbsp;
+        			<strong class="text-success"><i class="icon-ok"></i> Meets in person</strong>
+        		</p>
+        		<p>
+        			<i class="icon-star"></i> <i class="icon-star"></i> <i class="icon-star"></i> <i class="icon-star"></i> <i class="icon-star"></i>
+        		</p>
+      	</div>
+      </div>
+    	<div class="col-lg-12 background-content sub-profile-box">
+    		<h4 class="no-margin">Background&nbsp;&nbsp;&nbsp;<i class="icon-list-alt"></i><i class="icon-caret-down pull-right"></i></h4>
+    		<div class="background-list">
+    			<div>
+    				<strong>Team Liquid</strong>
+    				<p>Short summary yadda yadda yadda.</p>
+    				<p class="text-muted">2010-2012 (2 years)</p>
+    			</div>
+    			<div>
+    				<strong>Evil Geniuses</strong>
+    				<p>Short summary yadda yadda yadda.</p>
+    				<p class="text-muted">2008-2010 (2 years)</p>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="col-lg-12 background-content sub-profile-box">
+    		<h4 class="no-margin">Coaching Style&nbsp;&nbsp;&nbsp;<i class="icon-bullhorn"></i><i class="icon-caret-down pull-right"></i></h4>
+    	</div>
+    </div>
 	</div>
-	<div class="col-lg-3 col-offset-1 content-box">
+	<div class="col-lg-3 col-lg-offset-1 background-content padded-box">
+		<h3 class="text-primary text-center no-margin">$25 / hr</h3>
+		
+		<div class="contact-accordion">
+			<h4 class="text-center contact-header">Contact&nbsp;&nbsp;&nbsp;<i class="icon-double-angle-down"></i></h4>
+			<div class="accordion-links">
+				<div><a href=""><i class="icon-envelope"></i>&nbsp;&nbsp;&nbsp;hubridnoxx@gmail.com</a></div>
+				<div><a href=""><i class="icon-twitter"></i>&nbsp;&nbsp;&nbsp;@hubridnoxx</a></div>
+			</div>
+		</div>
+		
+		<h3>Info</h3>
+		<a href="">Youtube</a>
 		
 	</div>
 </div>
