[master] pretty much finished coach profile page, also started on form stuff but it's hard

--- a/Symfony/app/Resources/public/css/bootstrap.css
+++ b/Symfony/app/Resources/public/css/bootstrap.css
@@ -2995,7 +2995,7 @@ button.close {
 }
 
 .navbar-inverse .navbar-brand {
-  color: #999999;
+  color: #ffffff;
 }
 
 .navbar-inverse .navbar-brand:hover,
