--- a/Symfony/app/Resources/public/css/global.css
+++ b/Symfony/app/Resources/public/css/global.css
@@ -1,8 +1,31 @@
 /* GLOBAL
    ============================= */
 
+html {
+    height: 100%;
+}
+
 body {
   padding-top: 50px;
+  height: 100%;
+}
+
+#wrap {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    /* Negative indent footer by it's height */
+    margin: 0 auto -90px;
+}
+
+#push {
+	height: 90px;
+}
+
+#footer {
+    background-color: #eee;
+    margin-top: 40px;
+    height: 50px;
 }
 
 .no-margin {
@@ -12,6 +35,11 @@ body {
 a:hover {
 	text-decoration: none !important;
 }
+
+/* HEADER
+   ============================= */
+   
+
 
 /* SIGN-IN/LOGIN
    ============================= */
@@ -75,28 +103,54 @@ a:hover {
 	font-size: 20px;
 }
 
+.location-info {
+	margin: 5px 0;
+}
+
+.contact-accordion {
+	margin: 20px 0;
+}
+
 .contact-header {
 	background-color: #5cb85c;
 	padding: 15px;
-	margin: 20px 0 0 0;
+	margin: 0;
 	color: #fff;
 }
 
 .accordion-links div a {
 	background-color: #ddd;
 	color: #333;
-	padding: 10px;
+	padding: 15px 10px;
 	display: block;
+	border-bottom: 1px solid #ccc;
 }
 
 .accordion-links div a:hover {
 	background-color: #ccc;
 }
 
-.background-list {
+.content-list {
 	padding: 20px;
 }
 
-.background-list div {
+.content-list div {
 	margin-bottom: 20px;
+}
+
+.race-labels {
+	margin: 5px 0 0 0;
+}
+
+.review-title {
+	margin: 10px 0;
+	font-size: 16px;
+}
+
+/* FOOTER
+   ============================= */
+   
+.footer-text {
+	line-height: 50px;
+	vertical-align: middle;
 }
