--- a/Symfony/app/Resources/views/framework.html.twig
+++ b/Symfony/app/Resources/views/framework.html.twig
@@ -45,6 +45,7 @@
     </div>
     <!-- JavaScript plugins (requires jQuery) -->
     {% javascripts '%kernel.root_dir%/Resources/public/js/*' %}
+    		<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
        <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
   </body>
