--- a/Symfony/app/Resources/public/css/global.css
+++ b/Symfony/app/Resources/public/css/global.css
@@ -154,6 +154,10 @@ a:hover {
 	margin: 0 0 20px 0;
 }
 
+.filter-header span {
+	font-size: 14px;
+}
+
 .rate-group {
 	width: 40%;
 }
@@ -162,6 +166,22 @@ a:hover {
 	line-height: 34px; 
 	width: 10%;
 	text-align: center;
+}
+
+.results-table td {
+		width: 254px;
+		border-top: none !important;
+}
+
+.search-avatar {
+	width: 75px;
+	height: 75px;
+}
+
+.search-bio {
+	margin: 10px 0;
+	height: 60px;
+	
 }
 
 
